# DASieve

./: .gitignore  .gitmodules  README.md  gpu_test.py  psd_qc.pkl  pyproject.toml  requirements.txt  test.py  test2.py  test_ar_pick.py  well_plot.py
dasieve/: __init__.py  association.py  associator.py  catalog.py  denoise.py  detection.py  geometry.py  phasenet_memory.py  picker.py  picking.py  processing.py  qc.py  store.py  watcher.py
dasieve.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: compare_association.py  test.py  test_association.py  test_associator.py
